--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -1,1 +1,19 @@
-BASE_URL=https://training.by
+BASE_URL=https://skyup.aero/en/
+
+CITY_FROM=Odesa
+CITY_TO=Barcelona
+
+FLIGHT_VERSION_BASIC=basic
+FLIGHT_VERSION_STANDARD=standard
+FLIGHT_VERSION_FLEX=flex
+
+PASSENGER_LAST_NAME=Tester
+PASSENGER_FIRST_NAME=Automation
+PASSENGER_BIRTH_DAY=08
+PASSENGER_BIRTH_MONTH=09
+PASSENGER_BIRTH_YEAR=2001
+PASSENGER_GENDER=male
+PASSENGER_PASSPORT_NUMBER=123123
+PASSENGER_PASSWORD_EXPIRY_DAY=08
+PASSENGER_PASSWORD_EXPIRY_MONTH=09
+PASSENGER_PASSWORD_EXPIRY_YEAR=2031
