add hw with sauce lab

--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -1,4 +1,7 @@
 BASE_URL=https://skyup.aero/en/
+USERNAME=AdrianBoichuk
+ACCESS_KEY=b318bdb8-adee-4bc4-b387-a77a58a08530
+
 
 CITY_FROM=Odesa
 CITY_TO=Barcelona
